# e-gradebook

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  manager.bat  manager.sh
docs/: annotated.html  annotated_dup.js  classCustomLogger-members.html  classCustomLogger.html  classCustomLogger.js  classDbInit-members.html  classDbInit.html  classDbInit.js  classRouter-members.html  classRouter.html  classRouter.js  classes.html  config_8h.html  config_8h.js  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_bbd6674d859f4cefaacb708974cac240.html  dir_bbd6674d859f4cefaacb708974cac240.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  initialize__db_8h.html  initialize__db_8h.js  initialize__db_8h_source.html  logger_8h.html  logger_8h.js  logger_8h_source.html  main_8cpp.html  menudata.js  navtreedata.js  (+5 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_8.js  (+3 more)
hurl/: classes.hurl  grades.hurl  students.hurl  teachers.hurl
include/: config.h  logger.h
src/: config.h  initialize_db.cpp  initialize_db.h  logger.cpp  logger.h  main.cpp
static/: main.js  style.css
templates/: index.html  index.mustache
(+14 files in other folders)
